--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ border: none;
         <div class="sidebar"> 
         <h2>Menú</h2> 
         <ul> 
-        <li><a href="index.html">Inicio</a></li> 
+        <li><a href="https://cesarsan24.github.io/Mi-pagina-Cesar-Sanchez/">Inicio</a></li> 
         <li><a href="https://cesarsan24.github.io/Ejercicio-11/" target="frameformulario">Ejercicio 11</a></li> 
         <li><a href="https://cesarsan24.github.io/Ejercicio-12/" target="frameformulario">Ejercicio 12</a></li> 
         <li><a href="https://cesarsan24.github.io/Ejercicio-13/" target="frameformulario">Ejercicio 13</a></li> 
